# CLAW_CODE

./: .gitignore  PARITY.md  README.md  THIRD_PARTY_NOTICES.md  USAGE.md  generate_key.py  generate_key_with_logging.py  test_generate_key.py  test_generate_key_with_logging.py  test_quadratic_roots.py
.claude/plans/: model-add-command.md
.github/scripts/: check_doc_source_of_truth.py
.github/workflows/: release.yml  rust-ci.yml
docs/: compaction.md  container.md  g002-security-verification-map.md  harness.md
docs/superpowers/plans/: 2026-07-16-saw-harness-integration.md  2026-07-16-skillweaver-integration.md  2026-07-17-skillweaver-tool-integration.md
docs/superpowers/specs/: 2026-07-17-skillweaver-tool-integration-design.md
install/: install.py
install/backends/: linux.sh  macos.sh  windows.ps1
rust/: .claw.json  Cargo.toml  MOCK_PARITY_HARNESS.md  README.md  USAGE.md
rust/crates/api/src/: client.rs  http_client.rs  lib.rs
rust/crates/api/tests/: client_integration.rs
rust/crates/claw-engine/: Cargo.toml
rust/crates/claw-engine/src/: client.rs  error.rs  lib.rs  mcp.rs  setup.rs  sink.rs  tool_executor.rs
rust/crates/claw-tui/: Cargo.toml
rust/crates/claw-tui/src/: app.rs  config.rs  lib.rs  main.rs  markdown.rs  slash.rs  terminal.rs  theme.rs  turn.rs
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: lib.rs
rust/crates/commands/tests/: custom_commands.rs
rust/crates/runtime/examples/: caveman_fidelity.rs
rust/crates/runtime/src/: bash.rs  bash_validation.rs  caveman.rs  compact.rs  config.rs  config_validate.rs  conversation.rs  dreamer.rs  file_ops.rs  harness_assets.rs  hooks.rs  lane_events.rs  lib.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs  policy_engine.rs  prompt.rs  sandbox.rs  session.rs  skill_weaver.rs  trident.rs  worker_boot.rs  workflow.rs  (+1 more)
rust/crates/rusty-claude-cli/: Cargo.toml
rust/scripts/: install.sh
scripts/: caveman-fidelity.sh  dogfood-build.sh
(+33 files in other folders)
