[package]
name = "claw-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared agent engine: provider streaming, tool execution, and permission prompting behind a frontend-agnostic sink."

[lib]
path = "src/lib.rs"

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools = { path = "../tools" }

[lints]
workspace = true
