[package]
name = "claw-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "claw-tui"
path = "src/main.rs"

[dependencies]
crossterm.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde_json.workspace = true
unicode-width.workspace = true
