[package]
name = "claw-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
api = { path = "../api" }
crossterm.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde_json.workspace = true
unicode-width.workspace = true
