[package]
name = "claw-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
api = { path = "../api" }
claw-engine = { path = "../claw-engine" }
crossterm.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
runtime = { path = "../runtime" }
serde_json.workspace = true
tools = { path = "../tools" }
unicode-width.workspace = true

[lints]
workspace = true
